Don't compute aspect ratio for empty screen geometries

Apparently some kinds of virtual screens have a geometry of 0x0, which causes a divide-by-zero when computing the aspect ratio

Since the aspect ratio is meaningless in that case just don't show it

BUG: 456235
(cherry picked from commit 97e612c2652e47b017ecba93397f98ccf45098c2)